--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Blog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+ <head>
+	<title>Mitchell Murry; Designer + Coffee</title>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700|Merriweather+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
+	 <header id="main_navigation" class=".span_4_of_4 clearfix">
+            <a href="#" class="name">Mitchell Murry</a>
+            <nav>
+                <%= link_to "Articles", posts_path %>
+                <a href="writings.html">Writings</a>
+                <a href="#">Work</a>
+                <a href="#">Say Hello!</a>
+            </nav>
+        </header>
 
 <%= yield %>
 
