--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,24 @@
 </head>
 <body>
 	 <header id="main_navigation" class=".span_4_of_4 clearfix">
-            <a href="#" class="name">Mitchell Murry</a>
+            <%= link_to "Mitchell Murry", root_path, class: "name" %>
             <nav>
-                <%= link_to "Articles", posts_path %>
-                <a href="writings.html">Writings</a>
+                <%= link_to "Writings", posts_path %>
                 <a href="#">Work</a>
                 <a href="#">Say Hello!</a>
             </nav>
         </header>
 
 <%= yield %>
+
+	<footer id="main_footer">
+		<p class="copyright">&copy;2015 Mitchell G. Murry</p>
+			<nav>
+			<a href="http://twitter.com/mitchmurry"	target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="http://dribbble.com/mitchmurry"	target="_blank"><i class="fa fa-dribbble"></i></a>
+			<a href="http://linkedin.com/mitchellmurry"	target="_blank"><i class="fa fa-linkedin"></i></a>
+			</nav>
+	</footer>
 
 </body>
 </html>
