--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,22 +5,27 @@
         <hr>
     </header>
 
-            <div id="content">
-              <%= @post.content %>
-            </div>
+    <div id="content">
+        <%= markdown @post.content %>
+    </div>
+    <hr>
 
-            <hr>
+    <div id="share_box">
+        <p>Share The DO List</p>
+        <!-- Twitter -->
+    <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @mackenziechild - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-twitter"></i></a>
+    <!-- Facebook -->
+    <a onclick="javascript:window.open('http://www.facebook.com/sharer.php?u=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-facebook"></i></a>
+    <!-- Google Plus -->
+    <a onclick="javascript:window.open('https://plus.google.com/share?url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-google-plus"></i></a>
+    </div>
 
-            <div id="share_box">
-                <p>Share <%= @post.title %></p>
-                <!-- Twitter -->
-			    <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @mackenziechild - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-twitter"></i></a>
-			    <!-- Facebook -->
-			    <a onclick="javascript:window.open('http://www.facebook.com/sharer.php?u=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-facebook"></i></a>
-			    <!-- Google Plus -->
-			    <a onclick="javascript:window.open('https://plus.google.com/share?url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-google-plus"></i></a>
-            </div>
+    <hr>
 
-            <hr>
+</div>
 
-        </div>
+<br>
+<br>
+
+<%= link_to "Edit", edit_post_path(@post) %>
+<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
